<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.aiagenda.viewmodel.PostsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        tools:context=".ui.CreatePostFragment">

        <ImageView
            android:id="@+id/ivArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/navigating_back_description"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold_font"
            android:text="@string/add_post"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ivArrowBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivArrowBack" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular_font"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPosts" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{viewModel::setTitle}"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/roboto_medium_font"
            android:hint="@string/post_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvPostType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular_font"
            android:text="@string/post_type"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <EditText
            android:id="@+id/etPostType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{viewModel::setType}"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/roboto_medium_font"
            android:hint="@string/post_type_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPostType" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular_font"
            android:text="@string/date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPostType" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{viewModel::setDate}"
            android:background="@drawable/edit_text_background"
            android:enabled="true"
            android:focusable="false"
            android:fontFamily="@font/roboto_medium_font"
            android:hint="@string/date_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate" />

        <TextView
            android:id="@+id/tvHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular_font"
            android:text="@string/hour"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDate" />

        <EditText
            android:id="@+id/etHour"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{viewModel::setHour}"
            android:background="@drawable/edit_text_background"
            android:enabled="true"
            android:focusable="false"
            android:fontFamily="@font/roboto_medium_font"
            android:hint="@string/hour_hint"
            android:importantForAutofill="no"
            android:inputType="time"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHour" />

        <Button
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:enabled="@{viewModel.isEnabled}"
            android:fontFamily="@font/roboto_bold_font"
            android:text="@string/add_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/pbLoading"
            layout="@layout/loading_animation"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>